force-app/main/default/objects/VILigneDetaille__c/VILigneDetaille__c.object-meta.xml
<CustomObject>
    <label>Ligne détaillée</label>
    <nameField>
        <label>Nom de VILigneDetaille</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lignes détaillées</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>