force-app/main/default/objects/VILigneDetaille__c/fields/Affaire__c.field-meta.xml
<CustomField>
    <fullName>Affaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affaire</label>
    <referenceTo>VIAffaire__c</referenceTo>
    <relationshipName>Ecritures_contreparties</relationshipName>
    <type>Lookup</type>
</CustomField>