force-app/main/default/objects/VILigneDetaille__c/fields/Annee__c.field-meta.xml
<CustomField>
    <fullName>Annee__c</fullName>
    <formula>year( Periode_comptable__r.Date_de_debut__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Année</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>