force-app/main/default/objects/VILigneDetaille__c/fields/Cas__c.field-meta.xml
<CustomField>
    <fullName>Cas__c</fullName>
    <inlineHelpText>Type d&apos;écriture</inlineHelpText>
    <label>Cas</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>