force-app/main/default/objects/VILigneDetaille__c/fields/Centre_Section__c.field-meta.xml
<CustomField>
    <fullName>Centre_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centre / Section</label>
    <referenceTo>VICentre_Section__c</referenceTo>
    <relationshipName>Ecritures_contreparties</relationshipName>
    <type>Lookup</type>
</CustomField>