force-app/main/default/objects/VILigneDetaille__c/fields/Centre_Section_Code__c.field-meta.xml
<CustomField>
    <fullName>Centre_Section_Code__c</fullName>
    <formula>left(Centre_Section__r.Name,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centre / Section - Code</label>
    <type>Text</type>
</CustomField>