force-app/main/default/objects/VILigneDetaille__c/fields/Centre_Section_Libelle__c.field-meta.xml
<CustomField>
    <fullName>Centre_Section_Libelle__c</fullName>
    <formula>right(  Centre_Section__r.Name ,len(Centre_Section__r.Name) - 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centre / Section - Libellé</label>
    <type>Text</type>
</CustomField>