force-app/main/default/objects/VILigneDetaille__c/fields/Code_Affaire__c.field-meta.xml
<CustomField>
    <fullName>Code_Affaire__c</fullName>
    <label>Code Affaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>