force-app/main/default/objects/VILigneDetaille__c/fields/Compte_general__c.field-meta.xml
<CustomField>
    <fullName>Compte_general__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte général</label>
    <referenceTo>VICompte_general__c</referenceTo>
    <relationshipName>Ecritures_contreparties</relationshipName>
    <type>Lookup</type>
</CustomField>