force-app/main/default/objects/VILigneDetaille__c/fields/Frais_generaux__c.field-meta.xml
<CustomField>
    <fullName>Frais_generaux__c</fullName>
    <label>Frais généraux</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>