force-app/main/default/objects/VILigneDetaille__c/fields/K3__c.field-meta.xml
<CustomField>
    <fullName>K3__c</fullName>
    <label>K3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>