force-app/main/default/objects/VILigneDetaille__c/fields/Mois__c.field-meta.xml
<CustomField>
    <fullName>Mois__c</fullName>
    <formula>Month(Periode_comptable__r.Date_de_debut__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mois</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>