force-app/main/default/objects/VILigneDetaille__c/fields/Montant_debours_avec_sens__c.field-meta.xml
<CustomField>
    <fullName>Montant_debours_avec_sens__c</fullName>
    <formula>if(text(Sens__c)=&apos;C&apos;, Debours__c , Debours__c*(-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant débours avec sens</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>