force-app/main/default/objects/VILigneDetaille__c/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <label>Heures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>