force-app/main/default/objects/VILigneDetaille__c/fields/Part_K3__c.field-meta.xml
<CustomField>
    <fullName>Part_K3__c</fullName>
    <formula>if(abs(K3__c) &gt; abs(Frais_generaux__c) , K3__c - Frais_generaux__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part K3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>