force-app/main/default/objects/VILigneDetaille__c/fields/Part_PRI__c.field-meta.xml
<CustomField>
    <fullName>Part_PRI__c</fullName>
    <formula>if(abs(Frais_generaux__c)  &gt;  abs(Debours__c), Frais_generaux__c  -  Debours__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Frais Généraux</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>