force-app/main/default/objects/VILigneDetaille__c/fields/Periode_comptable__c.field-meta.xml
<CustomField>
    <fullName>Periode_comptable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Période comptable</label>
    <referenceTo>VIPeriode__c</referenceTo>
    <relationshipName>Ecritures_contreparties</relationshipName>
    <type>Lookup</type>
</CustomField>