force-app/main/default/objects/VILigneDetaille__c/fields/Sens__c.field-meta.xml
<CustomField>
    <fullName>Sens__c</fullName>
    <label>Sens</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sens_ecriture_comptable</valueSetName>
    </valueSet>
</CustomField>