force-app/main/default/objects/VILigneDetaille__c/fields/Sous_Chapitre__c.field-meta.xml
<CustomField>
    <fullName>Sous_Chapitre__c</fullName>
    <label>Sous-Chapitre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sous_chapitre</valueSetName>
    </valueSet>
</CustomField>