force-app/main/default/objects/VILigneDetaille__c/fields/Type_de_depense__c.field-meta.xml
<CustomField>
    <fullName>Type_de_depense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type de dépense</label>
    <referenceTo>VIType_de_depense__c</referenceTo>
    <relationshipName>Ecritures_contreparties</relationshipName>
    <type>Lookup</type>
</CustomField>