force-app/main/default/objects/VILigneDetaille__c/fields/Type_de_depense_Code__c.field-meta.xml
<CustomField>
    <fullName>Type_de_depense_Code__c</fullName>
    <formula>left( Type_de_depense__r.Name,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de dépense - Code</label>
    <type>Text</type>
</CustomField>