force-app/main/default/objects/VILigneDetaille__c/fields/Type_de_depense_Libelle__c.field-meta.xml
<CustomField>
    <fullName>Type_de_depense_Libelle__c</fullName>
    <formula>right( Type_de_depense__r.Name,len(Type_de_depense__r.Name) - 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de dépense - Libellé</label>
    <type>Text</type>
</CustomField>